# EUDR_compliance

./: .env.example  .gitattributes  .gitignore  README.md  commands.md  count_report.md  main_audit.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
GEE_dynamic/: auth.py  config.py  verify_dataset.py
GEE_dynamic/preprocessing/: aligner.py  dataset_loader.py
GEE_dynamic/src/: fusion_engine.py  generate_hybrid.py  generate_labels.py  height_filter.py
inputs/: farms_osm.csv
notebooks/: kaggle_deeplab_training.ipynb  kaggle_siamese_training.ipynb  kaggle_tessera_training.ipynb  train_farm_net.ipynb
reports/: TESSERA_mitigation_spec.md  scraper_upgrade_spec.md  validation_farms.txt
scripts/: validate_notebooks.py
src/: ML_farm_net.py  NDVI_predictor.py  __init__.py  audit_trail.py  benchmark.py  change_detector.py  change_embed_model.py  change_embed_train.py  change_siamese_model.py  change_siamese_train.py  cloud_filter.py  compare_baseline_reports.py  count_images.py  dds_exporter.py  detect_deforestation.py  enrich_farm_countries.py  enrich_labels.py  find_farms.py  geotessera_mask_tiler.py  hybrid_model.py  hybrid_train.py  inference.py  logging_config.py  pipeline_runner.py  sentinel_client.py  stratified_validation_split.py  tessera_backbone.py  tessera_embed_infer.py  tessera_embed_train.py  tessera_embedding_generation.py  tessera_train.py  train_utils.py  vegetation_index.py
src/postprocessing/: refiner.py
src/preprocessing/: aligner.py  change_dataset.py  dataset_loader.py  histogram_match.py
tests/: conftest.py  test_change_dataset.py  test_histogram_match.py  test_metrics.py  test_model_forward.py
