[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eudr-compliance"
version = "0.1.0"
description = "Satellite-based EUDR compliance analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # Satellite / STAC
    "pystac-client>=0.7.0",
    "rasterio>=1.3.0",
    "requests>=2.31.0",
    # Cloud detection
    "s2cloudless>=1.7.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "osmnx>=1.7.0",
    # Image processing
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    # Visualisation
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
    # Report generation
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Google Earth Engine
    "earthengine-api>=0.1.370",
    # GeoTESSERA embeddings
    "geotessera>=0.1.0",
]

[project.scripts]
eudr-run = "src.pipeline_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "GEE_dynamic*", "NDVI_pred*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-level import not at top — intentional: logger declared before path-dependent imports
    "W291",   # trailing whitespace in code
    "W293",   # trailing whitespace in blank lines (common in docstrings)
]
